--- a/hipstapic-web/src/main/webapp/partials/pic-list.html
+++ b/hipstapic-web/src/main/webapp/partials/pic-list.html
@@ -1,6 +1,8 @@
-<!--<div class="container">-->
-<div class="photos">
-    <ul class="row">
-        <li ng-repeat="pic in results" class="col-lg-2 col-md-2 col-sm-3 col-xs-4"><img src="{{pic.url}}"/></li>
-    </ul>
+<div class="row">
+    <div ng-repeat="pic in results" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
+        <img src="{{pic.url}}" height="200" width="200">
+        <!--
+        <img src="http://placehold.it/200"/>
+        -->
+    </div>
 </div>
