--- a/hipstapic-web/src/main/webapp/partials/pic-list.html
+++ b/hipstapic-web/src/main/webapp/partials/pic-list.html
@@ -1,6 +1,6 @@
 <div class="row">
     <div ng-repeat="pic in results" class="col-lg-2 col-md-3 col-sm-4 col-xs-6">
-        <img src="{{pic.url}}" height="200" width="200">
+        <img src="{{pichost}}/{{pic.filename}}" height="250" width="250" alt="{{pic.filename}}">
         <!--
         <img src="http://placehold.it/200"/>
         -->
