--- a/hipstapic-web/src/main/webapp/css/app.css
+++ b/hipstapic-web/src/main/webapp/css/app.css
@@ -1,11 +1,14 @@
-div#photos ul {
-    padding: 0 0 0 0;
-    margin: 0 0 0 0;
+
+div.picture {
+    margin: 5px 0px 5px 5px;
+    border: 1px solid #000;
+    width: 255px;
+    text-align: center;
+    display: inline-block;
 }
-div#photos ul li {
-    list-style: none;
-    margin-bottom: 25px;
-}
-div#photos ul li img {
-    cursor: pointer;
+div.title {
+    text-align: center;
+    font-weight: normal;
+    width: 240px;
+    margin: 5px;
 }
