--- a/hipstapic-web/src/main/webapp/partials/pic-list.html
+++ b/hipstapic-web/src/main/webapp/partials/pic-list.html
@@ -1,6 +1,6 @@
 <div ng-repeat="pic in results" class="picture">
     <img src="{{pichost}}/{{pic.filename}}" height="250" width="250" alt="{{pic.filename}}">
-    <div class="title">{{pic.title}} [{{pic.createTimestamp | date : 'short' }}]</div>
+    <div class="title">{{pic.title}} [{{pic.createDate | date : 'short' }}]</div>
     <!--
     <img src="http://placehold.it/250" height="250" width="250" alt="test">
     <div class="title">Muir Lens, Rainbow Film, Berry Pop Flash</div>
