--- a/hipstapic-web/src/main/webapp/css/app.css
+++ b/hipstapic-web/src/main/webapp/css/app.css
@@ -1,3 +1,6 @@
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
 .navbar-default .navbar-nav > li > a.app-title {
     margin-left: 0px;
     padding-left: 0px;
@@ -14,27 +17,29 @@ div.app-content {
 div.gallery {
     margin-bottom: 10px;
 }
-div.picture {
-    margin: 5px 0px 5px 5px;
-    width: 255px;
+div.image-box {
+    margin: 0px 2px 8px 2px;
+    width: 250px;
+    height: 295px;
     text-align: center;
     display: inline-block;
 }
-div.title {
+div.image-caption {
+    height: 45px;
     text-align: center;
     font-size: 80%;
     font-weight: normal;
-    width: 240px;
-    margin: 5px;
+    width: 250px;
+    height: 45px;
 }
-span.paging {
-    margin-left: 10px;
-    color: green;
-}
-div.total-results {
-    margin-left: 10px;
-    margin-bottom: 10px;
+
+div.page-navigation, div.page-results {
     font-size: 90%;
+    /*margin-left: 10px;*/
+    margin-bottom: 10px;
+}
+div.page-navigation {
+    margin-top: 5px;
 }
 .keywords {
     color: #CC6600;
